--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "random-user-agent",
+  "name": "noone-user-agent",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/shenzhimeng/random-user-agent.git"
+    "url": "git+https://github.com/shenzhimeng/noone-user-agent.git"
   },
   "keywords": [],
   "author": "noone",
